--- a/deploy.yml
+++ b/deploy.yml
@@ -11,6 +11,20 @@
     - { role: cloud-azure, tags: ['azure'] }
     - { role: local, tags: ['local'] }
 
+  post_tasks:
+    - name: Wait until SSH becomes ready...
+      local_action:
+        module: wait_for
+        port: 22
+        host: "{{ cloud_instance_ip }}"
+        search_regex: "OpenSSH"
+        delay: 10
+        timeout: 320
+        state: present
+      become: false
+      tags:
+        - cloud
+
 - name: Post-provisioning tasks
   hosts: vpn-host
   gather_facts: false
