--- a/roles/cloud-digitalocean/tasks/main.yml
+++ b/roles/cloud-digitalocean/tasks/main.yml
@@ -36,5 +36,5 @@
     cloud_provider: digitalocean
     ipv6_support: yes
 
-- name: Wait for SSH to become available
-  local_action: "wait_for port=22 host={{ do.droplet.ip_address }} timeout=320"
+- set_fact:
+    cloud_instance_ip: "{{ do.droplet.ip_address }}"
