--- a/roles/cloud-ec2/tasks/main.yml
+++ b/roles/cloud-ec2/tasks/main.yml
@@ -108,7 +108,5 @@
     ipv6_support: no
   with_items: "{{ ec2.tagged_instances }}"
 
-- name: Wait for SSH to become available
-  local_action: "wait_for port=22 host={{ item.public_dns_name }} timeout=320"
-  with_items: "{{ ec2.tagged_instances }}"
-  become: false
+- set_fact:
+    cloud_instance_ip: "{{ ec2.tagged_instances[0].public_ip }}"
