--- a/roles/cloud-gce/tasks/main.yml
+++ b/roles/cloud-gce/tasks/main.yml
@@ -36,5 +36,5 @@
     credentials_file: "{{ credentials_file  }}"
     project_id: "{{ credentials_file_lookup.project_id }}"
 
-- name: Waiting for SSH to become available
-  local_action: "wait_for port=22 host={{ google_vm.instance_data[0].public_ip }} timeout=320"
+- set_fact:
+    cloud_instance_ip: "{{ google_vm.instance_data[0].public_ip }}"
