--- a/roles/local/tasks/main.yml
+++ b/roles/local/tasks/main.yml
@@ -19,6 +19,5 @@
     cloud_provider: local
   when: server_ip == "localhost"
 
-- name: Waiting for SSH to become available
-  local_action: "wait_for port=22 host={{ server_ip }} timeout=320"
-  when: server_ip != "localhost"
+- set_fact:
+    cloud_instance_ip: "{{ server_ip }}"
