random password for the p12 certificates #135

--- a/deploy.yml
+++ b/deploy.yml
@@ -53,16 +53,5 @@
     - { role: vpn, tags: [ 'vpn' ] }
 
   post_tasks:
-    - shell: |
-        echo "#----------------------------------------------------------------------#"
-        echo "#                          Congratulations!                            #"
-        echo "#                     Your Algo server is running.                     #"
-        echo "#    Config files and certificates are in the ./configs/ directory.    #"
-        echo "#              Go to https://whoer.net/ after connecting               #"
-        echo "#        and ensure that all your traffic passes through the VPN.      #"
-        echo "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}"
-        echo "#----------------------------------------------------------------------#"
-      tags: always
-      register: congrats
-    - debug: msg="{{ congrats.stdout_lines }}"
+    - debug: msg="{{ congrats.split('\n') }}"
       tags: always
