--- a/config.cfg
+++ b/config.cfg
@@ -9,10 +9,6 @@ users:
 # Avoid using '+' in your email address otherwise auditd will fail to start.
 auditd_action_mail_acct: email@example.com
 
-# Exported certificates will be protected by the password below:
-easyrsa_p12_export_password: vpnpws
-
-
 ### Advanced users only below this line ###
 
 easyrsa_dir: /opt/easy-rsa-ipsec
@@ -74,3 +70,14 @@ local_service_ip: 172.16.0.1
 pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
 VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
 CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
+
+congrats: |
+  "#----------------------------------------------------------------------#"
+  "#                          Congratulations!                            #"
+  "#                     Your Algo server is running.                     #"
+  "#    Config files and certificates are in the ./configs/ directory.    #"
+  "#              Go to https://whoer.net/ after connecting               #"
+  "#        and ensure that all your traffic passes through the VPN.      #"
+  "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}"
+  "#                     The p12 password is {{ easyrsa_p12_export_password }}"
+  "#----------------------------------------------------------------------#"
