disable the proxy and client-to-client options

--- a/config.cfg
+++ b/config.cfg
@@ -63,6 +63,10 @@ pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
 VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
 CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
 
+# Block traffic between connected clients
+
+BetweenClients_DROP: Y
+
 congrats: |
   "#----------------------------------------------------------------------#"
   "#                          Congratulations!                            #"
