UI hints to ssh keys and message clean up
Though the algo ssh key names are in the config file at the bottom, they don't seem to be displayed, and are easy to miss for new users.

--- a/config.cfg
+++ b/config.cfg
@@ -74,9 +74,10 @@ congrats: |
   "#    Config files and certificates are in the ./configs/ directory.    #"
   "#              Go to https://whoer.net/ after connecting               #"
   "#        and ensure that all your traffic passes through the VPN.      #"
-  "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}     "
-  "#                     The p12 password is {{ easyrsa_p12_export_password }}      "
-  "#                  The CA key password is {{ easyrsa_CA_password }}      "
+  "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}         #"
+  "#                     The p12 password is {{ easyrsa_p12_export_password }}                     #"
+  "#                  The CA key password is {{ easyrsa_CA_password }}                 #"
+  "#            Shell access: ssh -i algo.pem root@{{ ansible_ssh_host }}          #"
   "#----------------------------------------------------------------------#"
 
 SSH_keys:
