--- a/roles/cloud-gce/tasks/main.yml
+++ b/roles/cloud-gce/tasks/main.yml
@@ -6,7 +6,7 @@
   gce:
     instance_names: "{{ server_name }}"
     zone: "{{ zone }}"
-    machine_type: n1-standard-1
+    machine_type: f1-micro
     image: ubuntu-1604
     service_account_email: "{{ credentials_file_lookup.client_email  }}"
     credentials_file: "{{ credentials_file  }}"
