--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ inventory = inventory
 pipelining = True
 retry_files_enabled = False
 host_key_checking = False
+timeout = 30
 
 [paramiko_connection]
 record_host_keys = False
