Fix for the local installation

--- a/config.cfg
+++ b/config.cfg
@@ -77,8 +77,13 @@ congrats: |
   "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}         #"
   "#                     The p12 password is {{ easyrsa_p12_export_password }}                     #"
   "#                  The CA key password is {{ easyrsa_CA_password }}                 #"
+  "#----------------------------------------------------------------------#"
+
+additional_information: |
+  "#----------------------------------------------------------------------#"
   "#      Shell access: ssh -i {{ ansible_ssh_private_key_file }} {{ ansible_ssh_user }}@{{ ansible_ssh_host }}        #"
   "#----------------------------------------------------------------------#"
+
 
 SSH_keys:
   comment: algo@ssh
