--- a/roles/vpn/tasks/main.yml
+++ b/roles/vpn/tasks/main.yml
@@ -21,6 +21,7 @@
     - /usr/lib/ipsec/stroke
   notify:
     - restart apparmor
+  tags: ['apparmor']
 
 - name: Enable services
   service: name={{ item }} enabled=yes
@@ -38,8 +39,9 @@
 
 - name: Configure ip6tables so IPSec traffic can traverse the tunnel
   iptables: ip_version=ipv6 table=nat chain=POSTROUTING source="{{ vpn_network_ipv6 }}" jump=MASQUERADE
-  when: (security_enabled is not defined) or
-        (security_enabled is defined and security_enabled != "y")
+  when: ((security_enabled is not defined) or
+        (security_enabled is defined and security_enabled != "y")) and
+        ipv6_support is defined and ipv6_support == "yes"
   notify:
     - save iptables
 
