--- a/deploy.yml
+++ b/deploy.yml
@@ -64,8 +64,17 @@
     - debug: msg="{{ additional_information.split('\n') }}"
       tags: cloud
 
-    - name: Save the CA key
+    - name: Save the CA key password
       local_action: >
         shell echo "{{ easyrsa_CA_password }}" > /tmp/ca_password
       become: no
       tags: tests
+
+    - name: Delete the CA key
+      local_action:
+        module: file
+        path: "configs/{{ IP_subject_alt_name }}/pki/private/cakey.pem"
+        state: absent
+      become: no
+      tags: always
+      when: Delete_CAKEY is defined and Delete_CAKEY == "Y"
