Add the algo ssh key to any server (prevent fails when a user wants to update-users on a server deployed by algo but not with the algo ssh key)

--- a/deploy.yml
+++ b/deploy.yml
@@ -7,7 +7,7 @@
   pre_tasks:
     - name: Local pre-tasks
       include: playbooks/local.yml
-      tags: [ 'cloud' ]
+      tags: [ 'always' ]
 
   roles:
     - { role: cloud-digitalocean, tags: ['digitalocean'] }
