--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-ansible>=2.1
+ansible>=2.1,<2.2.1
 dopy==0.3.5
 boto>=2.5
 boto3
@@ -6,3 +6,4 @@ azure==2.0.0rc5
 apache-libcloud
 six
 pyopenssl
+jinja2==2.8
