Additional info in the congrats

--- a/config.cfg
+++ b/config.cfg
@@ -75,7 +75,7 @@ congrats: |
   "#              Go to https://whoer.net/ after connecting               #"
   "#        and ensure that all your traffic passes through the VPN.      #"
   "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}         #"
-  "#                     The p12 password is {{ easyrsa_p12_export_password }}                     #"
+  "#                The p12 and SSH keys password is {{ easyrsa_p12_export_password }}             #"
   "#                  The CA key password is {{ easyrsa_CA_password }}                 #"
   "#----------------------------------------------------------------------#"
 
