--- a/deploy.yml
+++ b/deploy.yml
@@ -63,3 +63,18 @@
 
     - debug: msg="{{ additional_information.split('\n') }}"
       tags: cloud
+
+    - name: Save the CA key password
+      local_action: >
+        shell echo "{{ easyrsa_CA_password }}" > /tmp/ca_password
+      become: no
+      tags: tests
+
+    - name: Delete the CA key
+      local_action:
+        module: file
+        path: "configs/{{ IP_subject_alt_name }}/pki/private/cakey.pem"
+        state: absent
+      become: no
+      tags: always
+      when: Store_CAKEY is defined and Store_CAKEY == "N"
