--- a/roles/vpn/tasks/main.yml
+++ b/roles/vpn/tasks/main.yml
@@ -197,7 +197,7 @@
     chdir: "configs/{{ IP_subject_alt_name }}/pki/"
     creates: certs/{{ item }}_crt_generated
   environment:
-    subjectAltName: "DNS:{{ IP_subject_alt_name }}"
+    subjectAltName: "DNS:{{ IP_subject_alt_name }}_{{ item }},IP:{{ IP_subject_alt_name }}"
   with_items: "{{ users }}"
 
 - name: Build the client's p12
