fixed accidentall user change

--- a/config.cfg
+++ b/config.cfg
@@ -2,8 +2,8 @@
 
 # Add as many users as you want for your VPN server here
 users:
-  - akirilov
-  - kimla
+  - dan
+  - jack
 
 # Add an email address to send logs if you're using auditd for monitoring.
 # Avoid using '+' in your email address otherwise auditd will fail to start.
