--- a/config.cfg
+++ b/config.cfg
@@ -67,23 +67,20 @@ CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
 
 BetweenClients_DROP: Y
 
-congrats: |
-  "#----------------------------------------------------------------------#"
-  "#                          Congratulations!                            #"
-  "#                     Your Algo server is running.                     #"
-  "#    Config files and certificates are in the ./configs/ directory.    #"
-  "#              Go to https://whoer.net/ after connecting               #"
-  "#        and ensure that all your traffic passes through the VPN.      #"
-  "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}         #"
-  "#                The p12 and SSH keys password is {{ easyrsa_p12_export_password }}             #"
-  "#                  The CA key password is {{ easyrsa_CA_password }}                 #"
-  "#----------------------------------------------------------------------#"
-
-additional_information: |
-  "#----------------------------------------------------------------------#"
-  "#      Shell access: ssh -i {{ ansible_ssh_private_key_file }} {{ ansible_ssh_user }}@{{ ansible_ssh_host }}        #"
-  "#----------------------------------------------------------------------#"
-
+congrats:
+  common: |
+    "#                          Congratulations!                            #"
+    "#                     Your Algo server is running.                     #"
+    "#    Config files and certificates are in the ./configs/ directory.    #"
+    "#              Go to https://whoer.net/ after connecting               #"
+    "#        and ensure that all your traffic passes through the VPN.      #"
+    "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}         #"
+  p12_pass: |
+    "#                The p12 and SSH keys password is {{ easyrsa_p12_export_password }}             #"
+  ca_key_pass: |
+    "#                  The CA key password is {{ easyrsa_CA_password }}                 #"
+  ssh_access: |
+    "#      Shell access: ssh -i {{ ansible_ssh_private_key_file|default(omit) }} {{ ansible_ssh_user|default(omit) }}@{{ ansible_ssh_host|default(omit) }}        #"
 
 SSH_keys:
   comment: algo@ssh
